rozdzielenie kompilacji GWT do osobnego pliku